syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "acs12.proto";
// The namespace of this class
option csharp_namespace = "AElf.Contracts.ACS404";

service ACS404Contract {
  // The name of the state class the smart contract is going to use to access blockchain state
  option (aelf.csharp_state) = "AElf.Contracts.ACS404.ACS404ContractState";
  option (aelf.base) = "acs12.proto";
  
  // Initialize the contract
  rpc Initialize(InitializeInput) returns (google.protobuf.Empty){
  }

  // Set admin to another address
  rpc SetAdmin(aelf.Address) returns (google.protobuf.Empty) {

  }

  // Get current admin address
  rpc GetAdmin (google.protobuf.Empty) returns (aelf.Address) {option (aelf.is_view) = true;}

  // Set service wallet used to collect fees
  rpc SetServiceWallet(aelf.Address) returns (google.protobuf.Empty){
  }

  // Get current service wallet used to collect fees
  rpc GetServiceWallet (google.protobuf.Empty) returns (aelf.Address) {option (aelf.is_view) = true;}

  // Previews the Inscription image.
  rpc Preview (google.protobuf.Empty) returns (google.protobuf.Empty) {
  }

  // Uploads an image when a preview is requested
  rpc UploadImage (UploadImageInput) returns (google.protobuf.Empty) {
  }

  // Returns the image uploaded for preview
  rpc PreviewImage (PreviewImageInput) returns (google.protobuf.BytesValue) {option (aelf.is_view) = true;}

  // Exchanges Fungible token for Inscription tokens and vice-versa
  rpc Exchange (ExchangeInput) returns (google.protobuf.Empty) {
  }

  // Mints the inscription provided in the preview
  rpc Mint (MintInput) returns (google.protobuf.Empty) {
  }
}

message InitializeInput {
  aelf.Address admin = 1;
  aelf.Address serviceWallet = 2;
  aelf.Address imageUploader = 3;
  string fungibleTokenSymbol = 4;
  string inscriptionTokenSymbol = 5;
}

message UploadImageInput {
  aelf.Address userAddress = 1;
  bytes imageBytes = 2;
}

message PreviewImageInput {
  aelf.Address userAddress = 1;
}

message ExchangeInput {
  int64 amount = 1;
  bool toBaseToken = 2;
}

message MintInput {
  int64 mintTotalSupply = 1;
}

// An event that will be emitted when preview method is called and completed
message PreviewEvent {
  option (aelf.is_event) = true;
  aelf.Address userAddress = 1;
  int64 traits = 2;
}

// An event that will be emitted when an image is uploaded
message UploadImageEvent {
  option (aelf.is_event) = true;
  aelf.Address userAddress = 1;
  bytes imageBytes = 2;
}